# cobranca-facil_v2

./: .env.example  .gitignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
app/: global-error.tsx  globals.css  layout.tsx  page.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/data/: apuracao_dummy.py  apuracao_historico_dummy.py  clientes_dummy.py  cobrancas_dummy.py  constants.py  documentos_dummy.py
backend/app/models/: app_state.py  base.py  boleto.py  charge.py  customer.py  dunning.py  franqueadora.py  notification_log.py
backend/app/routers/: ai_dashboard.py  app_state.py  apuracao_upload.py  cadastro_upload.py  charges.py  chat.py  customers.py  dunning_rules.py  dunning_run.py  dunning_steps.py  franqueadora.py  logs.py  mia.py  simulation.py
backend/app/schemas/: app_state.py  boleto.py  charge.py  chat.py  customer.py  dunning.py  franqueadora.py  notification_log.py  simulation.py  upload.py
backend/app/services/: ai_service.py
components/: franqueadora-card.tsx  scroll-to-top.tsx  sidebar.tsx  topbar.tsx
docs/: estrategia-comercial-industria.docx  estrategia-comercial-industria.md
inngest/: client.ts  events.ts  index.ts
lib/: apuracao-calc.ts  apuracao-upload.ts  auth-helpers.ts  auth.ts  cobrancas-export.ts  constants.ts  crm-constants.ts  crm-export.ts  default-dunning-rule.ts  fetch-with-tenant.ts  franqueados-import-export.ts  risk-score.ts  sanitize-markdown.ts  spacing.ts  utils.ts
(+340 files in other folders)
